--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - pip install -r requirements.txt
 script:
- - mypy chatstack
+ - mypy -m main
+ - cd src && mypy -m chatstack
  - python -W default::Warning -m coverage run --branch -m pytest --tb short
  - python -m coverage report --include 'chatstack/*'
